live-study-sessions/Ingress-Controler-and-Cert-Manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issues: "letsencrypt-homolog" #Para dizer ao ingress como vamos utilizar o certificado
spec:
  # tls:
  # - hosts:
  #   - "bpvcode.com"
  #   secretName: "api-conversão-tls"
  # - hosts:
  #   - "bpvcode.com"
  #   secretName: "api-test-tls"
  rules:
    - host: minikube.local
      http:
        paths:
          - path: /api
            pathType: Prefix #! Should be Exact ??
            backend:
              service:
                name: recruitment-backend
                port:
                  number: 80
